[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Redux Sprites/TITLESCREEN.png" type="Texture" id=2]
[ext_resource path="res://Fonts/TickingTimebombBB.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scenes/optionsPopup.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Credits.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=2]

size = 128
use_mipmaps = false
use_filter = false
extra_spacing_char = 10
font_data = ExtResource( 3 )
_sections_unfolded = [ "Extra Spacing", "Font", "Resource", "Settings" ]

[sub_resource type="DynamicFont" id=3]

size = 64
use_mipmaps = false
use_filter = false
extra_spacing_top = 6
extra_spacing_char = 16
font_data = ExtResource( 3 )
_sections_unfolded = [ "Extra Spacing", "Font", "Resource", "Settings" ]

[sub_resource type="ButtonGroup" id=1]

resource_local_to_scene = true

[node name="Control" type="Control"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
_sections_unfolded = [ "Margin", "Material", "Rect" ]

[node name="TITLESCREEN" type="Sprite" parent="." index="0"]

texture = ExtResource( 2 )
offset = Vector2( 512, 300 )
_sections_unfolded = [ "Offset", "Region", "Transform" ]

[node name="MarginContainer" type="MarginContainer" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_top = 32.0
margin_right = -32.0
margin_bottom = -32.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin" ]

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_right = 960.0
margin_bottom = 536.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 0
_sections_unfolded = [ "Size Flags" ]

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 474.0
margin_bottom = 536.0
rect_min_size = Vector2( 80, 40 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 4
custom_constants/shadow_as_outline = 1
text = "Black Soul"
align = 1
valign = 1
autowrap = true
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor", "Margin", "Visibility", "custom_colors", "custom_constants", "custom_fonts" ]

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 478.0
margin_right = 952.0
margin_bottom = 536.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 24
alignment = 1
_sections_unfolded = [ "Rect", "Size Flags", "custom_constants" ]

[node name="New Game" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 474.0
margin_bottom = 88.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = SubResource( 1 )
text = "New Game"
flat = false
align = 1
_sections_unfolded = [ "Anchor", "Focus", "Grow Direction", "Hint", "Margin", "Material", "Mouse", "Rect", "Size Flags", "Theme", "Visibility", "custom_colors", "custom_fonts", "custom_styles" ]

[node name="Load Games" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 112.0
margin_right = 474.0
margin_bottom = 200.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = SubResource( 1 )
text = "Load Game"
flat = false
align = 1
_sections_unfolded = [ "Size Flags", "custom_fonts" ]

[node name="Options" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 224.0
margin_right = 474.0
margin_bottom = 312.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = SubResource( 1 )
text = "Options"
flat = false
align = 1
_sections_unfolded = [ "Size Flags" ]

[node name="Credits" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 336.0
margin_right = 474.0
margin_bottom = 424.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = SubResource( 1 )
text = "Credits"
flat = false
align = 1
_sections_unfolded = [ "Size Flags" ]

[node name="Exit" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 448.0
margin_right = 474.0
margin_bottom = 536.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = SubResource( 1 )
text = "Exit"
flat = false
align = 1
_sections_unfolded = [ "Size Flags" ]

[node name="Load Games" type="Panel" parent="." index="2"]

editor/display_folded = true
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 203.0
margin_top = 3.0
margin_right = 817.0
margin_bottom = 598.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="container" type="Container" parent="Load Games" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Anchor", "Margin" ]

[node name="Save Game 0" type="Button" parent="Load Games/container" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 244.0
margin_top = 203.0
margin_right = 346.0
margin_bottom = 223.0
rect_scale = Vector2( 1.2, 1.2 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Save 1"
flat = false
align = 1

[node name="Save Game 1" type="Button" parent="Load Games/container" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 244.0
margin_top = 269.0
margin_right = 346.0
margin_bottom = 289.0
rect_scale = Vector2( 1.2, 1.2 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Save 2"
flat = false
align = 1

[node name="Save Game 2" type="Button" parent="Load Games/container" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 244.0
margin_top = 343.0
margin_right = 346.0
margin_bottom = 363.0
rect_scale = Vector2( 1.2, 1.2 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Save 3"
flat = false
align = 1

[node name="Back" type="Button" parent="Load Games/container" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 256.0
margin_top = 521.0
margin_right = 358.0
margin_bottom = 541.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Back"
flat = false
align = 1

[node name="label" type="Label" parent="Load Games/container" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 249.0
margin_top = 79.0
margin_right = 321.0
margin_bottom = 93.0
rect_scale = Vector2( 1.5, 1.5 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Load Game"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect" ]

[node name="optionsPopup" parent="." index="3" instance=ExtResource( 4 )]

editor/display_folded = true
visible = false

[node name="WindowButton" parent="optionsPopup/Container/WindowText" index="0"]

items = [ "Windowed", null, false, 0, null, "Borderless", null, false, 1, null, "Fullscreen", null, false, 2, null ]

[node name="ResolutionButton" parent="optionsPopup/Container/ResolutionText" index="0"]

items = [ "1024x600", null, false, 0, null, "1440x900", null, false, 1, null, "1280x720", null, false, 2, null ]

[node name="RebindControls" parent="optionsPopup/Container" index="5"]

editor/display_folded = true

[node name="Credits" parent="." index="4" instance=ExtResource( 5 )]

visible = false

[node name="Team" parent="Credits/Container" index="1"]

text = "Executive Producer: Kieran Downs
Lead Designer: Boris Fleysher
Lead Developer: Boris Fleysher
Lead Artist: Nelson Chen
Audio: Kieran Downs
Story Direction: Jonas Liew
Code Monkeys: Boris Fleysher, Taylor Folkersen, Omer Ahmed
Notable Mentions: Jeff Cho, Daniel Jin, Alex Patterson

Thank you to all our friends and family for your support and
for playing through this game too many times!


Made in Godot with love and care. Spring/Summer 2018
Further developed by Kieran, Nelson and Omer for Animethon. Spring/Summer 2019"

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/New Game" to="." method="_on_New_Game_pressed"]

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Load Games" to="." method="_on_Load_Games_pressed"]

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Options" to="." method="_on_Options_pressed"]

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Credits" to="." method="_on_Credits_pressed"]

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]

[connection signal="pressed" from="Load Games/container/Save Game 0" to="." method="_on_Load_Game_pressed" binds= [ 0 ]]

[connection signal="pressed" from="Load Games/container/Save Game 1" to="." method="_on_Load_Game_pressed" binds= [ 1 ]]

[connection signal="pressed" from="Load Games/container/Save Game 2" to="." method="_on_Load_Game_pressed" binds= [ 2 ]]

[connection signal="pressed" from="Load Games/container/Back" to="." method="_on_Back_pressed"]

[connection signal="pressed" from="optionsPopup/Container/Back" to="." method="_on_Back_pressed"]

[connection signal="pressed" from="Credits/Container/Back" to="." method="_on_Back_pressed"]


[editable path="optionsPopup"]
[editable path="Credits"]
